<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="5dp"
    android:paddingTop="0dp" >

    <ImageView
        android:id="@+id/bignotification_ivcurrent_cover"
        android:layout_width="@dimen/bignotification_cover_width"
        android:layout_height="@dimen/bignotification_cover_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/bignotification_player_cover_contentdescription" />

    <TextView
        android:id="@+id/bignotification_tvcurrent_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/bignotification_ivcurrent_cover"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/bignotification_ivcurrent_cover"
        android:ellipsize="end"
        android:maxLines="2"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bignotification_tvcurrent_song"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/bignotification_tvcurrent_author"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bignotification_tvcurrent_author"
        android:lines="2"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/bignotification_headerseparator"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_alignLeft="@+id/bignotification_tvcurrent_song"
        android:layout_below="@+id/bignotification_tvcurrent_song"
        android:layout_marginTop="5dp"
        android:background="#444444" />

    <ImageView
        android:id="@+id/bignotification_ivback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bignotification_ivcurrent_cover"
        android:layout_alignLeft="@+id/bignotification_tvcurrent_song"
        android:contentDescription="@string/bignotification_player_back_contentdescription"
        android:src="@drawable/ic_skip_previous_white_36dp" />

    <ImageView
        android:id="@+id/bignotification_separator_back"
        android:layout_width="1px"
        android:layout_height="36dp"
        android:layout_alignTop="@+id/bignotification_ivback"
        android:layout_marginLeft="7dp"
        android:layout_toRightOf="@+id/bignotification_ivback"
        android:background="#444444" />

    <ImageView
        android:id="@+id/bignotification_ivpause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bignotification_ivback"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/bignotification_ivback"
        android:contentDescription="@string/bignotification_player_pause_contentdescription"
        android:src="@drawable/ic_pause_white_36dp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/bignotification_ivplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bignotification_ivback"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/bignotification_ivback"
        android:contentDescription="@string/bignotification_player_play_contentdescription"
        android:src="@drawable/ic_play_arrow_white_36dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/bignotification_separator_play"
        android:layout_width="1px"
        android:layout_height="36dp"
        android:layout_alignTop="@+id/bignotification_ivplay"
        android:layout_marginLeft="7dp"
        android:layout_toRightOf="@+id/bignotification_ivplay"
        android:background="#444444" />

    <ImageView
        android:id="@+id/bignotification_ivnext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bignotification_ivplay"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/bignotification_ivplay"
        android:contentDescription="@string/bignotification_player_next_contentdescription"
        android:src="@drawable/ic_skip_next_white_36dp" />

    <ImageView
        android:id="@+id/bignotification_ivclose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/bignotification_tvcurrent_song"
        android:layout_alignTop="@+id/bignotification_ivnext"
        android:layout_marginTop="5dp"
        android:alpha="0.3"
        android:contentDescription="@string/bignotification_player_close_contentdescription"
        android:src="@drawable/ic_close_white_24dp" />

</RelativeLayout>